# Agent-Based_Modeling

./: .gitignore  CMakeLists.txt  README.md
.github/: copilot-instructions.md
docs/: ModelDesign.md
include/: Agent.h  Domain.h  GridWorld.h  MainWindow.h  Pathfinder.h  Simulation.h
src/: Agent.cpp  GridWorld.cpp  MainWindow.cpp  Pathfinder.cpp  Simulation.cpp
tests/: CMakeLists.txt  test_agent.cpp  test_pathfinder.cpp
